--- a/Projekt_JM.ipynb
+++ b/Projekt_JM.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e96cb72",
+   "metadata": {},
+   "source": [
+    "#### Wczytuję dane"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1293,
    "id": "6166b1d1",
@@ -37,7 +45,7 @@
    "id": "f9ac98c0",
    "metadata": {},
    "source": [
-    "### Usuwam whitespaces w nazwach kolumn. Następnie zmieniam nazwy kolumn dla ułatwienia"
+    "#### Usuwam whitespaces w nazwach kolumn. Następnie zmieniam nazwy kolumn dla ułatwienia"
    ]
   },
   {
@@ -113,7 +121,7 @@
    "id": "3e599483",
    "metadata": {},
    "source": [
-    "### Widzę, że w przypadku zmiennych tekstowych są różnice w pisowni, spacje, wielkie i małe litery. Przed usunięciem duplikatów ujednolicę pisownię i brakujące wartości \" \" zapiszę w formie NaN"
+    "#### Widzę, że w przypadku zmiennych tekstowych są różnice w pisowni, spacje, wielkie i małe litery. Przed usunięciem duplikatów ujednolicę pisownię i brakujące wartości \" \" zapiszę w formie NaN"
    ]
   },
   {
@@ -153,7 +161,7 @@
    "id": "31cac2d0",
    "metadata": {},
    "source": [
-    "#### dla tych kolumn usuwam whitespaces, ' ' zastępuję wartościami nan i zmieniam typ na float"
+    "#### Dla tych kolumn usuwam whitespaces, ' ' zastępuję wartościami nan i zmieniam typ na float"
    ]
   },
   {
@@ -224,7 +232,7 @@
    "id": "06527841",
    "metadata": {},
    "source": [
-    "### Zostają zmienne clarity, color i cut. Usuwam whitespaces, zakoduję wartości NaN i uspójnię nazwy."
+    "#### Zostają zmienne clarity, color i cut. Usuwam whitespaces, zakoduję wartości NaN i uspójnię nazwy."
    ]
   },
   {
@@ -1231,7 +1239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37f027ae",
+   "id": "da299199",
    "metadata": {},
    "source": [
     "## Interpretacja wyników i wykresów uwzględniona w dashboardzie"
