--- a/Projekt_JM.ipynb
+++ b/Projekt_JM.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e96cb72",
+   "id": "d9f6b6eb",
    "metadata": {},
    "source": [
     "#### Wczytuję dane"
@@ -855,7 +855,7 @@
    "id": "f93862da",
    "metadata": {},
    "source": [
-    "#### Moją początkową metodą radzenia sobie z wartościami brakującymi było zastąpienie ich średnią lub medianą. Jednak zauważyłam, że w przypadku tych zmiennych ta metoda sprawia, że dużo wartości średnich czy mediany zaburza rozkład zmiennych, co miałoby zły wpływ na wyniki regresji. Z w przypadku większości zmiennych usuwanie braków również nie wchodzi w grę - jest ich za dużo. "
+    "#### Moją początkową metodą radzenia sobie z wartościami brakującymi było zastąpienie ich średnią lub medianą. Jednak zauważyłam, że w przypadku tych zmiennych ta metoda sprawia, że uzupełnianie braków średnią/medianą zaburza rozkład zmiennych, co miałoby zły wpływ na wyniki regresji. W przypadku większości zmiennych usuwanie braków również nie wchodzi w grę - jest ich za dużo. "
    ]
   },
   {
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da299199",
+   "id": "c772790f",
    "metadata": {},
    "source": [
     "## Interpretacja wyników i wykresów uwzględniona w dashboardzie"
