--- a/Projekt_JM.ipynb
+++ b/Projekt_JM.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "60498f8b",
+   "metadata": {},
+   "source": [
+    "## DIAMONDS DASHBOARD "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1245,
-   "id": "2cc1a92c",
+   "execution_count": 3,
+   "id": "09311090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f6b6eb",
+   "id": "3cc10dbb",
    "metadata": {},
    "source": [
     "#### Wczytuję dane"
@@ -1239,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c772790f",
+   "id": "81d2ae4e",
    "metadata": {},
    "source": [
     "## Interpretacja wyników i wykresów uwzględniona w dashboardzie"
